bundle/manifests/cluster-group-upgrades-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: talm-metrics-serving-cert
  creationTimestamp: null
  labels:
    app.kubernetes.io/component: talm
    app.kubernetes.io/name: talm-operator
    control-plane: controller-manager
  name: cluster-group-upgrades-controller-manager-metrics-service
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: talm
    app.kubernetes.io/name: talm-operator
    control-plane: controller-manager
status:
  loadBalancer: {}
