bundle/manifests/cluster-group-upgrades-operator-controller-manager-metrics-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: talm-operator
    app.kuberenetes.io/component: talm
    control-plane: controller-manager
  name: cluster-group-upgrades-operator-controller-manager-metrics-svc
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/name: talm-operator
    app.kuberenetes.io/component: talm
    control-plane: controller-manager
status:
  loadBalancer: {}
