bundle/manifests/cluster-group-upgrades-operator_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cluster-group-upgrades-operator
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: talm
      app.kubernetes.io/name: talm-operator
      control-plane: controller-manager
  policyTypes:
  - Egress
  - Ingress
